--- a/MouseGestureL.ini
+++ b/MouseGestureL.ini
@@ -4,7 +4,7 @@ IniFileVersion=1.41
 ActiveAsTarget=0
 Interval=20
 AlwaysHook=0
-PrvntCtxtMenu=0
+PrvntCtxtMenu=1
 Threshold=15
 LongThresholdX=800
 LongThresholdY=600
@@ -114,80 +114,76 @@ Default=;アクティブ化<MG_CR>if (InStr(MG_WClass, "Chrome_WidgetWin")!=1 ||
 
 [RB_←]
 G=RB_L_
-Default=;Back<MG_CR>Send, !{Left}
+Default=;previous tab<MG_CR>Send, +^{Tab}<MG_CR>
 
 [RB_→]
 G=RB_R_
-Default=;Forward<MG_CR>Send, !{Right}
+Default=;next tab<MG_CR>Send, ^{Tab}<MG_CR>
 
 [RB_↑]
 G=RB_U_
-Default=;previous tab<MG_CR>Send, +^{Tab}<MG_CR>
+Default=;Top<MG_CR>Send, ^{Home}<MG_CR><MG_CR>
 
 [RB_↓]
 G=RB_D_
-Default=;next tab<MG_CR>Send, ^{Tab}<MG_CR>
+Default=;Bottom<MG_CR>Send, ^{End}<MG_CR>
 
 [RB_←↑]
 G=RB_LU_
-Default=;Copy<MG_CR>Send, ^c<MG_CR>
+Default=;Zoom in<MG_CR>Send, +^{+}<MG_CR>
 
 [RB_←↓]
 G=RB_LD_
-Default=;Paste<MG_CR>Send, ^v<MG_CR>
+Default=;Zoom out<MG_CR>Send, ^{-}<MG_CR>
 
 [RB_→↑]
 G=RB_RU_
-Default=;Close<MG_CR>Send, ^w
+Default=;Task View<MG_CR>Send, #{Tab}<MG_CR>
 
 [RB_→↓]
 G=RB_RD_
-Default=;Restore tab<MG_CR>Send, +^t
+Default=;Reload<MG_CR>Send, ^r<MG_CR>
 
 [RB_↑←]
 G=RB_UL_
-Default=;Reload<MG_CR>Send, ^r<MG_CR>
+Default=;Close<MG_CR>Send, ^w<MG_CR><MG_CR>
 
 [RB_↑→]
 G=RB_UR_
-Default=;Task View<MG_CR>Send, #{Tab}<MG_CR>
+Default=;Restore tab<MG_CR>Send, +^t<MG_CR>
 
 [RB_↓←]
 G=RB_DL_
-Default=;Zoom out<MG_CR>Send, ^{-}<MG_CR>
+Default=;Copy<MG_CR>Send, ^c<MG_CR>
 
 [RB_↓→]
 G=RB_DR_
-Default=;Zoom in<MG_CR>Send, +^{+}
+Default=;Paste<MG_CR>Send, ^v<MG_CR>
 
 [RB_→←]
 G=RB_RL_
-Default=;New tab<MG_CR>Send, ^t<MG_CR>
+Default=;Back<MG_CR>Send, !{Left}<MG_CR>
 
 [RB_↓↑_]
 G=RB_DU_
-Default=;Top<MG_CR>Send, ^{Home}
+Default=;Search<MG_CR>Send, ^f<MG_CR><MG_CR>
 
 [RB_↑↓_]
 G=RB_UD_
-Default=;Bottom<MG_CR>Send, ^{End}
+Default=;New tab<MG_CR>Send, ^t<MG_CR>
 
 [RB_←→]
 G=RB_LR_
-Default=;search<MG_CR>Send, ^f<MG_CR>
+Default=;Forward<MG_CR>Send, !{Right}<MG_CR><MG_CR>
 
 [RB_WU_]
 G=RB_WU_
-Default=;previous tab<MG_CR>Send, +^{Tab}<MG_CR>
+Default=;previous tab<MG_CR>Send, +^g<MG_CR>
 
 [RB_WD_]
 G=RB_WD_
-Default=;next tab<MG_CR>Send, ^{Tab}<MG_CR>
+Default=;next tab<MG_CR>Send, ^g<MG_CR>
 
-[LB_RB_]
-G=LB_RB_
-Default=;Forward<MG_CR>Send, !{Right}
-
-[RB_LB_]
-G=RB_LB_
-Default=;Back<MG_CR>Send, !{Left}
+[RB_MB_]
+G=RB_MB_
+Default=;Enter<MG_CR>Send, {Enter}<MG_CR>
