↑←: new tab, ↑↓: close tab

--- a/MouseGestureL.ini
+++ b/MouseGestureL.ini
@@ -1,4 +1,4 @@
-﻿[Settings]
+[Settings]
 IniFileVersion=1.41
 8Dir=0
 ActiveAsTarget=0
@@ -146,7 +146,7 @@ Default=;Reload<MG_CR>Send, ^r<MG_CR>
 
 [RB_↑←]
 G=RB_UL_
-Default=;Close<MG_CR>Send, ^w<MG_CR><MG_CR>
+Default=;New tab<MG_CR>Send, ^t<MG_CR><MG_CR>
 
 [RB_↑→]
 G=RB_UR_
@@ -170,7 +170,7 @@ Default=;Search<MG_CR>Send, ^f<MG_CR><MG_CR>
 
 [RB_↑↓_]
 G=RB_UD_
-Default=;New tab<MG_CR>Send, ^t<MG_CR>
+Default=;Close<MG_CR>Send, ^w<MG_CR>
 
 [RB_←→]
 G=RB_LR_
